fixed spacing for grid 1

--- a/style.css
+++ b/style.css
@@ -67,15 +67,16 @@ body{
 }
 
 .g1-content-container img{
-width: 77%;    
+width: 75%;    
 
 }
 
 .g1-content-container{
+    margin-left: 10px;
     display: grid;
     justify-content: center;
     align-items: end;
-    grid-template-columns:  1.3fr 1fr;
+    grid-template-columns:  1.2fr 0.2fr 1.12fr;
 }
 
 .g1-content-container >div{
@@ -85,7 +86,25 @@ width: 77%;
 
 .g1-title-grid{
     display: grid;
-    justify-content: center;
+    justify-content: end;
+    
     align-items: center;
     height: 100%;
+}
+
+.g1-title-grid h4{
+    color: #9fa3a7;
+    margin-top: 10px;
+    font-family: 'Open Sans', sans-serif;
+    margin-bottom: 10px;
+    font-size: 0.8em;
+    width: 80%;
+}
+
+.g1-title-grid h3{
+    font-family: Arvo, sans-serif;
+    width: 75%;
+    font-weight: 300;
+    font-size: 1.5em;
+    line-height: 1.3em;
 }
